; ModuleID = '/home/carl/AnghaBench/linux/drivers/acpi/extr_ec.c_acpi_ec_query_init.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/acpi/extr_ec.c_acpi_ec_query_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ec_query_wq = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [10 x i8] c"kec_query\00", align 1
@ec_max_queries = common dso_local global i32 0, align 4
@ENODEV = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @acpi_ec_query_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @acpi_ec_query_init() #0 {
  %1 = alloca i32, align 4
  %2 = load i64, i64* @ec_query_wq, align 8
  %3 = icmp ne i64 %2, 0
  br i1 %3, label %13, label %4

4:                                                ; preds = %0
  %5 = load i32, i32* @ec_max_queries, align 4
  %6 = call i64 @alloc_workqueue(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i32 0, i32 %5)
  store i64 %6, i64* @ec_query_wq, align 8
  %7 = load i64, i64* @ec_query_wq, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %12, label %9

9:                                                ; preds = %4
  %10 = load i32, i32* @ENODEV, align 4
  %11 = sub nsw i32 0, %10
  store i32 %11, i32* %1, align 4
  br label %14

12:                                               ; preds = %4
  br label %13

13:                                               ; preds = %12, %0
  store i32 0, i32* %1, align 4
  br label %14

14:                                               ; preds = %13, %9
  %15 = load i32, i32* %1, align 4
  ret i32 %15
}

declare dso_local i64 @alloc_workqueue(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
